# decanter

./: .gitignore  .readthedocs.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: tests.yml
decanter/: __init__.py  __main__.py  _localpaths.py  _reduction.py  api.py  cli.py  config.py  pipeline.py
decanter/calib/: __init__.py  aperture.py  discover.py  flat.py  transform.py
decanter/extract/: __init__.py  box_extract_1d.py  psf_center.py  strip_extract_2d.py
decanter/image2d/: __init__.py  apscatter.py  cosmic_ray.py  fixpix.py  flatfield.py  sky_subtract.py
decanter/io/: __init__.py  apdb.py  fits.py  fsr.py  headers.py  iraf_fc.py  iraf_id.py  linelists.py  listfile.py  parameter.py
decanter/plotting/: __init__.py  diagnostics.py  parity.py  style.py  summary.py
decanter/rectify/: __init__.py  transform.py
decanter/stages/: __init__.py
decanter/utils/: __init__.py  cosmic_ray.py  cvsolver.py  fixpix.py  iminterp.py  interp.py  iraf_icfit.py  iraf_scopy.py  median_filter.py  psf.py  sigma_clip.py  spline3.py
decanter/wavelength/: __init__.py  dispcor.py  fsr.py
decanter/waveshift/: __init__.py  apply.py  measure.py
docs/: api.rst  conf.py  index.rst
tests/: conftest.py
tests/regression/: README.md
tests/unit/: test_apdb.py  test_aperture.py  test_api_reduce.py  test_bg_subtract.py  test_calib_discover.py  test_calib_match.py  test_config.py  test_cosmic_ray.py  test_cvsolver.py  test_fixpix.py  test_iminterp.py  test_imports.py  test_io.py  test_iraf_fc.py  test_iraf_icfit.py  test_iraf_scopy.py  test_s01_sky_subtract.py  test_s03_apscatter.py  test_s04_flatfield.py  test_s05_badpix_interp.py  test_s07_psf_center.py  test_s08_extract_1d.py  test_s10_waveshift.py  test_s13_fsr_truncate.py  test_sigma_clip.py  test_spline3.py  test_transform_subsample.py
